# python-project-83

./: .env  Makefile  README.md  database.sql  gitignore  pyproject.toml
.github/workflows/: github-actions.yml  main.yaml
page_analyzer/: __init__.py  app.py  database_handler.py  db_actions.py  page_content.py  page_parser.py  validation.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  show_all.html  show_one.html
