[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sergey-emelyanov <emelia35@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
